--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-sourcemaps": "^1.3.0",
     "json-loader": "^0.5.1",
     "less-loader": "^2.0.0",
+    "marty": "git+https://github.com/jlongster/marty.git",
     "nconf": "^0.7.1",
     "raw-loader": "^0.5.1",
     "react-tabbar": "0.0.10",
