--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "json-loader": "^0.5.1",
     "less-loader": "^2.0.0",
     "marty": "git+https://github.com/jlongster/marty.git",
+    "material-ui": "^0.5.0",
     "nconf": "^0.7.1",
     "raw-loader": "^0.5.1",
+    "react-router": "^0.11.6",
     "react-tabbar": "0.0.10",
     "react-tabs": "^0.1.2",
     "style-loader": "^0.8.2",
+    "transducers.js": "^0.2.3",
     "webpack": "^1.4.15"
   },
   "devDependencies": {
