--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.3.0",
     "json-loader": "^0.5.1",
+    "jsx-loader": "^0.12.2",
     "less-loader": "^2.0.0",
     "marty": "git+https://github.com/jlongster/marty.git",
     "material-ui": "^0.5.0",
     "nconf": "^0.7.1",
     "raw-loader": "^0.5.1",
+    "react": "^0.12.2",
     "react-router": "^0.11.6",
     "react-tabbar": "0.0.10",
     "react-tabs": "^0.1.2",
